# cam_attr_controller

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindOpenCV.cmake  FindmvIMPACT.cmake  cook_lcmtypes.cmake  iraps.cmake  libhandler.cmake  libhandler_boost.cmake  libhandler_glib.cmake  libhandler_lcm.cmake  libhandler_mvimpact.cmake  libhandler_opencv.cmake  pods.cmake
config/: README  bluefox-stereo.json  bluefox-stereo.json~  bluefox2-1931.json  bluefox2-2109.json  bluefox2-2122.json  bluefox2-mono.json  bluefox2-mono.json~
data/: 090823a.csv  090823b.csv  090823g.csv  0908a.csv  0908b.csv  0908c.csv  0909.csv  exp_gain.csv  exp_gain2.csv  exp_gain_table.csv  exp_gain_table_index1.csv  exp_gain_table_index2.csv  exp_gain_table_index3.csv
data/outdoor_sample/: crf.csv  times.txt
lcmdefs/: PACKAGES.cmake
lcmdefs/bot_core/: bot_core_image_t.lcm
lcmdefs/irp_sen/: irp_sen_alt_t.lcm  irp_sen_autonix_t.lcm  irp_sen_color_float_t.lcm  irp_sen_cpc_t.lcm  irp_sen_fog_t.lcm  irp_sen_gps_raw_t.lcm  irp_sen_lpc_t.lcm  irp_sen_mti_t.lcm  irp_sen_status.lcm  irp_sen_vlp16_packet_t.lcm
matlab/controller/: exp_gain_controller.m  gp_expo_gain_controller.m  gpgo_hyperparam_optim.m
matlab/controller/arxiv/: exp_gain_controller_old.m  gpgo.m  gpgo_for_figures.m
matlab/data/gp_hyperparam_tuning/: 2pm_750.csv  5pm_43.csv  6pm_152.csv  6pm_344.csv
matlab/exposure_control/: bisectmethod.m  compute_image_metric.m  compute_next_exp_binary.m  compute_next_exp_binary_TODO.m  example2.m  exp_ctrl.m  fig1plot.m  hytansigmoid.m  searchmethod.m
matlab/exposure_control/dat/: 090823c.csv  090823d.csv  090823e.csv  090823f.csv  37data.csv  38data.csv  38datar.csv  README  d1_Chang.csv  d1_Ours.csv  d1_Shim.csv  d2_Chang.csv  d2_Ours.csv  d2_Shim.csv  d3_Ours.csv  d3_Shim.csv  d4_Chang.csv  d4_Ours.csv  d4_Shim.csv  d5_Chang.csv  d5_Ours.csv  d5_Shim.csv  d5_Zhang.csv  d5_gradsum.csv  fig1.csv  test1.csv  test2.csv  test3.csv
matlab/exposure_control/gp/: gp_cov_init.m  gp_cov_init_normalize.m  gp_cov_k_POLY.m  gp_cov_k_SE.m  gp_predict.m  gp_train.m  gpgo.m  gpmi_optim.m  log_prob_k_RQ.m
matlab/exposure_gain_control/data/: data_checker.m  redata_d1.csv  redata_d2.csv  redata_d3.csv  redata_d4.csv
matlab/exposure_gain_control/gp/: exp_gain_controller.m  exp_gain_controller_multi.m  gp_cov_init.m  gp_cov_k_MATERN.m  gp_cov_k_NN.m  gpgo.m  gpgo_fixed_control.m  gpgo_for_figures.m  gpgo_hyperparam_optim.m  gpgo_inner.m  gpgo_normalize.m  gpmi_optim.m  log_prob_k_MATERN.m  log_prob_k_MEL.m  optimized_hyperparam_10.mat  optimized_hyperparam_100.mat  optimized_hyperparam_40.mat  optimized_hyperparam_50.mat  optimized_hyperparam_ei.mat
matlab/fcns_gp/: gp_cov_init.m  gp_cov_k_noise.m
matlab/fcns_img/: calc_img_newg.m  calc_img_snr.m  extract_img_metric.m
matlab/fcns_synth/: extract_img_metric.m
matlab/synth/: 2g_750.csv  4g_110.csv  4g_86.csv  7g_18.csv  rdataanal.m
matlab/synth/1_110/: SNR.csv  d1_Chang.csv  d1_Shim.csv  example1.m  rdata.m  redata.xls
matlab/synth/1_310/: example1.m
matlab/synth/1_344/: SNR.csv  d1_Chang.csv  d1_Ours.csv  d1_Shim.csv  example1.m  rdataanal.m  redata.xls
matlab/synth/1_43/: SNR.csv  d1_Chang.csv  d1_Ours.csv  d1_Shim.csv  example1.m  gain_control.m  r43.csv  r5pm_43.xls  rSNR.csv  rdata.m  rdataanal.m
matlab/synth/3_458/: SNR.csv  d1_Chang.csv  d1_Ours.csv  d3_Ours.csv  d3_Shim.csv  example1.m  rdata.m  redata.xls  times.txt
matlab/synth/3_750/: SNR.csv  d3_Chang.csv  d3_Ours.csv  d3_Shim.csv  example1.m  r750.csv  rdata.m  rdataanal.m  synthetic.m
matlab/synth/4_18/: d4_Chang.csv  d4_Ours.csv  d4_Shim.csv  example1.m  r6_18.xls
matlab/synth/4_86/: d4_Chang.csv  d4_Ours.csv  d4_Shim.csv  rdata.m  redata.xls
matlab/synth/hdr-photography-master/: README.md  d2_Chang.csv  d2_Ours.csv  d2_Shim.csv  debevec_paper_practice.m  debevec_paper_practice.rst  example1.m  gain_syn.m
matlab/synthetic/: calc_img_newg.m  calc_img_snr.m  crf.csv  debevec_paper_practice.m  extract_img_metric.m  gsolve.m  hdr_curve_fitting.m  hdr_curve_fitting_outdoor.m  img_synth.m  img_synth_factor_exp.m  img_synth_factor_exp_outdoor.m  img_synth_factor_gain.m  img_synth_outdoor.m  run_synth_gen.m  synthetic_generation.m  synthetic_generation_outdoor.m
matlab/synthetic/indoor/: gsolve.m  hdr_curve_fitting.m  img_synth_factor_exp.m  synthetic_generation.m
matlab/synthetic/indoor_sample/: crf.csv
matlab/synthetic/outdoor_sample/: crf.csv
src/: CMakeLists.txt
src/BotUtil/: BotUtils.h  BotUtils.h~  CMakeLists.txt  CMakeLists.txt~  Datatypes.h  EigenSophusConversion.cpp  EigenSophusConversion.h  ImageConversion.cpp  ImageConversion.h  TimeStamp.cpp  TimeStamp.h
src/HDR/: CMakeLists.txt  READ.txt  hdr.cpp  hdr.py
src/SensorDriver/: CMakeLists.txt  CMakeLists.txt~
src/SensorDriver/bluefox2/bluefox2lcm/: Bluefox2Parser.cpp  Bluefox2Parser.h  CMakeLists.txt  bluefox2-drv.cpp  bluefox2-drv.cpp~
src/SensorDriver/bluefox2/bluefox2mono/: CMakeLists.txt  Parser.h  bluefox2-mono.cpp  bluefox2calib_daq.cpp
src/SensorDriver/bluefox2/bluefox_driver/: CMakeLists.txt  bluefox2.cpp  bluefox2.h  bluefox2_setting.h
src/crf_fitting/: CMakeLists.txt  crf_fitting.cpp
src/data_collector/: CMakeLists.txt  Parser.cpp  Parser.h  main.cpp
src/eval_tester/: CMakeLists.txt  main.cpp
src/exp_ctrl/: CMakeLists.txt  main.cpp  param_util.cpp
src/exp_ctrl_tester/: CMakeLists.txt  main.cpp
src/exp_tester/: CMakeLists.txt  erf.txt  grf.txt  img_eval.cpp  img_eval.h  main.cpp
src/gp_gain_tester/: CMakeLists.txt  main.cpp
src/gp_optim/: CMakeLists.txt  config.h  gp_optimize.cpp  gp_optimize.h  kernelfunction.cpp  kernelfunction.h  main.cpp
src/gp_tester/: 0908.csv  CMakeLists.txt  main.cpp
src/irp_gpgo++/: CMakeLists.txt  config.h  gp_optimize.cpp  main.cpp
src/irp_imgeval++/: CMakeLists.txt  crf.csv  img_eval.cpp  img_eval.h
src/param-util/: CMakeLists.txt  param_util.cpp
src/testers/: CMakeLists.txt
src/testers/gp_exp_tester/: 37datar.csv  CMakeLists.txt  main.cpp
src/testers/gp_gain_tester/: 2pm_310.csv  CMakeLists.txt
(+50 files in other folders)
